--- a/src/MyReFood/Displaymyrefood/Displayorder.fxml
+++ b/src/MyReFood/Displaymyrefood/Displayorder.fxml
@@ -5,27 +5,27 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="173.0" prefWidth="1091.0" style="-fx-background-color: D9D9D9;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="173.0" prefWidth="1085.0" style="-fx-background-color: D9D9D9;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="NamaToko" layoutX="12.0" layoutY="-5.0" prefHeight="57.0" prefWidth="999.0" text="NamaToko">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <ImageView fx:id="fotoproduk" fitHeight="121.0" fitWidth="159.0" layoutX="-1.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="fotoproduk" fitHeight="121.0" fitWidth="159.0" layoutX="9.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="NamaPesanan" layoutX="191.0" layoutY="50.0" prefHeight="37.0" prefWidth="756.0" text="Nama Pesanan">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="955.0" layoutY="83.0" prefHeight="40.0" prefWidth="136.0" text="JumlahPesanan">
+      <Label fx:id="jumlahpesanan" alignment="CENTER" layoutX="897.0" layoutY="110.0" prefHeight="29.0" prefWidth="185.0" text="JumlahPesanan">
          <font>
             <Font size="19.0" />
          </font>
       </Label>
-      <Label layoutX="962.0" layoutY="120.0" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: white;" text="Order Selesai">
+      <Label fx:id="statusorder" alignment="CENTER" layoutX="897.0" layoutY="139.0" prefHeight="29.0" prefWidth="185.0" style="-fx-background-color: white;" text="Order Selesai">
          <font>
-            <Font name="System Bold" size="19.0" />
+            <Font name="System Bold" size="13.0" />
          </font>
       </Label>
    </children>
