--- a/src/MyReFood/Displaymyrefood/Displayorder.fxml
+++ b/src/MyReFood/Displaymyrefood/Displayorder.fxml
@@ -23,9 +23,19 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <Label fx:id="statusorder" alignment="CENTER" layoutX="897.0" layoutY="139.0" prefHeight="29.0" prefWidth="185.0" style="-fx-background-color: white;" text="Order Selesai">
+      <Label fx:id="statusorder" alignment="CENTER" layoutX="897.0" layoutY="139.0" prefHeight="29.0" prefWidth="185.0" style="-fx-background-color: lightwhite;" text="Order Selesai">
          <font>
             <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label fx:id="alamattoko" layoutX="190.0" layoutY="83.0" prefHeight="37.0" prefWidth="251.0" text="AlamatToko">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label fx:id="nomortoko" layoutX="191.0" layoutY="128.0" prefHeight="37.0" prefWidth="251.0" text="NomorToko">
+         <font>
+            <Font size="16.0" />
          </font>
       </Label>
    </children>
