--- a/src/PageSeeProduct/seepro.fxml
+++ b/src/PageSeeProduct/seepro.fxml
@@ -75,7 +75,7 @@
                      </font>
                   </Label>
                   <Label fx:id="seeprodalamat" layoutX="36.0" layoutY="395.0" prefHeight="45.0" prefWidth="662.0" text="Alamat :" />
-                  <TextArea fx:id="seeproddes" disable="true" layoutX="33.0" layoutY="531.0" prefHeight="154.0" prefWidth="1055.0">
+                  <TextArea fx:id="seeproddes" disable="true" layoutX="33.0" layoutY="531.0" prefHeight="154.0" prefWidth="1055.0" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></TextArea>
