--- a/src/MyProfile/Myprofile.fxml
+++ b/src/MyProfile/Myprofile.fxml
@@ -6,47 +6,51 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1111.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MyProfile.MyprofileController">
    <children>
-      <AnchorPane layoutX="242.0" layoutY="65.0" prefHeight="552.0" prefWidth="679.0" style="-fx-background-color: D9D9D9; -fx-background-radius: 20;" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="242.0" AnchorPane.topAnchor="65.0">
+      <AnchorPane layoutX="-1.0" prefHeight="690.0" prefWidth="1109.0" style="-fx-background-color: D9D9D9; -fx-background-radius: 20;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="170.0" layoutY="168.0" prefHeight="36.0" prefWidth="432.0" text="Institution Name">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <Label layoutX="172.0" layoutY="374.0" prefHeight="36.0" prefWidth="431.0" text="Adress :">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <Label layoutX="171.0" layoutY="240.0" prefHeight="36.0" prefWidth="236.0" text="Email : ">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="147.0" fitWidth="189.0" layoutX="268.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView blendMode="MULTIPLY" fitHeight="440.0" fitWidth="1134.0" layoutY="-126.0" pickOnBounds="true">
                <image>
-                  <Image url="@mif.jpg" />
+                  <Image url="@backgroundup2.png" />
                </image>
             </ImageView>
-            <TextField fx:id="shownameprofile" disable="true" layoutX="174.0" layoutY="199.0" prefHeight="31.0" prefWidth="340.0" style="-fx-background-color: white; -fx-background-radius: 15;" />
-            <TextField fx:id="showemailprofile" disable="true" layoutX="175.0" layoutY="274.0" prefHeight="31.0" prefWidth="340.0" style="-fx-background-color: white; -fx-background-radius: 15;" />
-            <Label layoutX="173.0" layoutY="309.0" prefHeight="36.0" prefWidth="432.0" text="Phone : ">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f6f6f6" height="106.0" layoutX="1.0" layoutY="212.0" stroke="BLACK" strokeType="INSIDE" width="1132.0" />
+            <Label layoutX="234.0" layoutY="214.0" prefHeight="36.0" prefWidth="432.0" text="Institution Name">
+               <font>
+                  <Font name="System Bold" size="26.0" />
+               </font>
+            </Label>
+            <Label layoutX="561.0" layoutY="473.0" prefHeight="36.0" prefWidth="431.0" text="Adress :">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="174.0" layoutY="466.0" prefHeight="36.0" prefWidth="236.0" text="Role : ">
+            <Label layoutX="560.0" layoutY="339.0" prefHeight="36.0" prefWidth="236.0" text="Email : ">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="showephoneprofile" disable="true" layoutX="177.0" layoutY="340.0" prefHeight="31.0" prefWidth="340.0" style="-fx-background-color: white; -fx-background-radius: 15;" />
-            <TextField fx:id="showroleprofile" disable="true" layoutX="179.0" layoutY="495.0" prefHeight="31.0" prefWidth="340.0" style="-fx-background-color: white; -fx-background-radius: 15;" />
-            <TextArea fx:id="showalamatprofile" disable="true" layoutX="177.0" layoutY="405.0" prefHeight="64.0" prefWidth="340.0" style="-fx-background-color: white;" wrapText="true" />
+            <TextField fx:id="shownameprofile" disable="true" layoutX="476.0" layoutY="220.0" prefHeight="31.0" prefWidth="340.0" style="-fx-background-color: white; -fx-background-radius: 15;" />
+            <TextField fx:id="showemailprofile" disable="true" layoutX="564.0" layoutY="373.0" prefHeight="31.0" prefWidth="340.0" style="-fx-background-color: white; -fx-background-radius: 15;" />
+            <Label layoutX="562.0" layoutY="408.0" prefHeight="36.0" prefWidth="432.0" text="Phone : ">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="238.0" layoutY="250.0" prefHeight="36.0" prefWidth="236.0" text="Role : ">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <TextField fx:id="showephoneprofile" disable="true" layoutX="566.0" layoutY="439.0" prefHeight="31.0" prefWidth="340.0" style="-fx-background-color: white; -fx-background-radius: 15;" />
+            <TextField fx:id="showroleprofile" disable="true" layoutX="482.0" layoutY="267.0" prefHeight="31.0" prefWidth="340.0" style="-fx-background-color: white; -fx-background-radius: 15;" />
+            <TextArea fx:id="showalamatprofile" disable="true" layoutX="566.0" layoutY="504.0" prefHeight="64.0" prefWidth="340.0" style="-fx-background-color: white;" wrapText="true" />
+            <Circle fx:id="circmage" fill="DODGERBLUE" layoutX="152.0" layoutY="215.0" radius="72.0" stroke="BLACK" strokeType="INSIDE" />
          </children>
       </AnchorPane>
    </children>
