--- a/src/Login/Scene1.fxml
+++ b/src/Login/Scene1.fxml
@@ -10,9 +10,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="panebackground" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" stylesheets="@CssLogin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.Controller1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" stylesheets="@CssLogin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.Controller1">
    <children>
-      <AnchorPane layoutX="287.0" layoutY="154.0" prefHeight="431.0" prefWidth="600.0" styleClass="backde" stylesheets="@CssLogin.css">
+      <ImageView fitHeight="854.0" fitWidth="1318.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Foto/Backgroundfill.jpg" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="246.0" layoutY="150.0" maxHeight="431.0" maxWidth="600.0" prefHeight="431.0" prefWidth="600.0" styleClass="backde" stylesheets="@CssLogin.css">
          <children>
             <AnchorPane fx:id="showinputlogin" layoutX="8.0" prefHeight="432.0" prefWidth="357.0">
                <children>
@@ -102,7 +107,7 @@
             </AnchorPane>
             <AnchorPane layoutX="358.0" layoutY="2.0" prefHeight="426.0" prefWidth="294.0">
                <children>
-                  <ImageView blendMode="MULTIPLY" fitHeight="422.0" fitWidth="368.0" layoutX="-4.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView blendMode="MULTIPLY" fitHeight="422.0" fitWidth="444.0" layoutX="-4.0" pickOnBounds="true">
                      <image>
                         <Image url="@Foto/GET%20RE-FOOD%201.png" />
                      </image>
