--- a/src/Login/Scene1.fxml
+++ b/src/Login/Scene1.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -19,48 +20,15 @@
       </ImageView>
       <AnchorPane layoutX="246.0" layoutY="150.0" maxHeight="431.0" maxWidth="600.0" prefHeight="431.0" prefWidth="600.0" styleClass="backde" stylesheets="@CssLogin.css">
          <children>
-            <AnchorPane fx:id="showinputlogin" layoutX="8.0" prefHeight="432.0" prefWidth="357.0">
+            <AnchorPane fx:id="showinputregister" prefHeight="436.0" prefWidth="357.0" style="-fx-background-color: F9FFFF; -fx-background-radius: 20;" stylesheets="@CssLogin.css" visible="false">
                <children>
-                  <TextField id="textfield2" fx:id="loginemail" layoutX="86.0" layoutY="148.0" prefHeight="25.0" prefWidth="181.0" promptText="xxxxxxx@gmail.com" stylesheets="@CssLogin.css" />
-                  <Label layoutX="84.0" layoutY="117.0" text="Email" />
-                  <Label layoutX="86.0" layoutY="189.0" text="Password" />
-                  <PasswordField id="textfield2" fx:id="loginpass" layoutX="86.0" layoutY="217.0" prefHeight="25.0" prefWidth="187.0" />
-                  <Label alignment="CENTER" layoutX="84.0" layoutY="23.0" prefHeight="54.0" prefWidth="165.0" text="Welcome" wrapText="true">
+                  <Label layoutX="49.0" layoutY="22.0" prefHeight="89.0" prefWidth="225.0" text="Sign Up ">
                      <font>
-                        <Font name="System Bold" size="37.0" />
+                        <Font size="51.0" />
                      </font></Label>
-                  <Button layoutX="84.0" layoutY="261.0" mnemonicParsing="false" onAction="#Tohomepage" prefHeight="40.0" prefWidth="179.0" styleClass="buttonmasuk" stylesheets="@CssLogin.css" text="Sign in" />
-                  <Button fx:id="butsignup" layoutX="109.0" layoutY="322.0" mnemonicParsing="false" onAction="#Choosesignup" prefHeight="31.0" prefWidth="135.0" styleClass="buttonsignup" stylesheets="@CssLogin.css" text="Create Account?">
+                  <Label layoutX="50.0" layoutY="105.0" text="With Us">
                      <font>
-                        <Font size="1.0" />
-                     </font>
-                  </Button>
-                  <Label fx:id="warnloginemail" layoutX="95.0" layoutY="177.0" prefHeight="13.0" prefWidth="165.0" textFill="#190505">
-                     <font>
-                        <Font name="System Bold Italic" size="9.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="warnloginpass" layoutX="95.0" layoutY="245.0" prefHeight="13.0" prefWidth="165.0" textFill="#190505">
-                     <font>
-                        <Font name="System Bold Italic" size="9.0" />
-                     </font>
-                  </Label>
-                  <Label alignment="CENTER" layoutX="89.0" layoutY="65.0" prefHeight="40.0" prefWidth="81.0" text="back!!" wrapText="true">
-                     <font>
-                        <Font name="System Bold" size="25.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-            <AnchorPane fx:id="showinputregister" layoutX="2.0" layoutY="-1.0" prefHeight="432.0" prefWidth="311.0" stylesheets="@CssLogin.css" visible="false">
-               <children>
-                  <Label layoutX="50.0" layoutY="22.0" prefHeight="54.0" prefWidth="135.0" text="Sign Up ">
-                     <font>
-                        <Font size="37.0" />
-                     </font></Label>
-                  <Label layoutX="50.0" layoutY="76.0" text="With Us">
-                     <font>
-                        <Font size="17.0" />
+                        <Font size="28.0" />
                      </font>
                   </Label>
                   <AnchorPane fx:id="signupas" layoutX="50.0" layoutY="158.0" prefHeight="162.0" prefWidth="207.0">
@@ -105,9 +73,43 @@
                   </AnchorPane>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="358.0" layoutY="2.0" prefHeight="426.0" prefWidth="294.0">
+            <AnchorPane fx:id="showinputlogin" layoutY="-2.0" prefHeight="438.0" prefWidth="357.0" style="-fx-background-color: F9FFFF; -fx-background-radius: 20;">
                <children>
-                  <ImageView blendMode="MULTIPLY" fitHeight="422.0" fitWidth="444.0" layoutX="-4.0" pickOnBounds="true">
+                  <TextField id="textfield2" fx:id="loginemail" layoutX="86.0" layoutY="148.0" prefHeight="25.0" prefWidth="181.0" promptText="Email" stylesheets="@CssLogin.css" />
+                  <PasswordField id="textfield2" fx:id="loginpass" layoutX="86.0" layoutY="217.0" prefHeight="25.0" prefWidth="187.0" promptText="password" />
+                  <Label alignment="CENTER" layoutX="84.0" layoutY="23.0" prefHeight="54.0" prefWidth="165.0" text="Welcome" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="37.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="84.0" layoutY="261.0" mnemonicParsing="false" onAction="#Tohomepage" prefHeight="40.0" prefWidth="179.0" styleClass="buttonmasuk" stylesheets="@CssLogin.css" text="Sign in" />
+                  <Button fx:id="butsignup" layoutX="109.0" layoutY="322.0" mnemonicParsing="false" onAction="#Choosesignup" prefHeight="31.0" prefWidth="135.0" styleClass="buttonsignup" stylesheets="@CssLogin.css" text="Create Account?">
+                     <font>
+                        <Font size="1.0" />
+                     </font>
+                  </Button>
+                  <Label fx:id="warnloginemail" layoutX="95.0" layoutY="177.0" prefHeight="13.0" prefWidth="165.0" textFill="#190505">
+                     <font>
+                        <Font name="System Bold Italic" size="9.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="warnloginpass" layoutX="95.0" layoutY="245.0" prefHeight="13.0" prefWidth="165.0" textFill="#190505">
+                     <font>
+                        <Font name="System Bold Italic" size="9.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER" layoutX="89.0" layoutY="65.0" prefHeight="40.0" prefWidth="81.0" text="back!!" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="25.0" />
+                     </font>
+                  </Label>
+                  <FontAwesomeIcon glyphName="USER" layoutX="55.0" layoutY="171.0" size="25" />
+                  <FontAwesomeIcon glyphName="LOCK" layoutX="56.0" layoutY="240.0" size="25" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="justimage" layoutX="358.0" layoutY="2.0" prefHeight="426.0" prefWidth="294.0" styleClass="backde" stylesheets="@CssLogin.css">
+               <children>
+                  <ImageView blendMode="MULTIPLY" fitHeight="456.0" fitWidth="444.0" layoutX="-4.0" layoutY="-22.0" pickOnBounds="true">
                      <image>
                         <Image url="@Foto/GET%20RE-FOOD%201.png" />
                      </image>
