--- a/src/Login/Scene1.fxml
+++ b/src/Login/Scene1.fxml
@@ -18,25 +18,32 @@
             <Image url="@Foto/Backgroundfill.jpg" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="246.0" layoutY="150.0" maxHeight="431.0" maxWidth="600.0" prefHeight="431.0" prefWidth="600.0" styleClass="backde" stylesheets="@CssLogin.css">
+      <AnchorPane layoutX="291.0" layoutY="130.0" maxHeight="431.0" maxWidth="600.0" prefHeight="431.0" prefWidth="600.0" styleClass="backde" stylesheets="@CssLogin.css">
          <children>
-            <AnchorPane fx:id="showinputregister" prefHeight="436.0" prefWidth="357.0" style="-fx-background-color: F9FFFF; -fx-background-radius: 20;" stylesheets="@CssLogin.css" visible="false">
+            <AnchorPane fx:id="showinputregister" prefHeight="438.0" prefWidth="313.0" style="-fx-background-color: F9FFFF; -fx-background-radius: 20;" stylesheets="@CssLogin.css" visible="false">
                <children>
-                  <Label layoutX="49.0" layoutY="22.0" prefHeight="89.0" prefWidth="225.0" text="Sign Up ">
+                  <Label layoutX="84.0" layoutY="21.0" prefHeight="89.0" prefWidth="225.0" text="Sign Up ">
                      <font>
                         <Font size="51.0" />
                      </font></Label>
-                  <Label layoutX="50.0" layoutY="105.0" text="With Us">
+                  <Label layoutX="163.0" layoutY="104.0" text="With Us">
                      <font>
                         <Font size="28.0" />
                      </font>
                   </Label>
-                  <AnchorPane fx:id="signupas" layoutX="50.0" layoutY="158.0" prefHeight="162.0" prefWidth="207.0">
+                  <AnchorPane fx:id="signupas" layoutX="19.0" layoutY="164.0" prefHeight="253.0" prefWidth="290.0">
                      <children>
-                        <Button layoutY="24.0" mnemonicParsing="false" onAction="#ChoosesignupBuyer" prefHeight="25.0" prefWidth="207.0" text="Lembaga Swadaya" />
-                        <Button layoutY="67.0" mnemonicParsing="false" onAction="#ChoosesignupSeller" prefHeight="25.0" prefWidth="207.0" text="Perusahaan" />
-                        <Button layoutX="60.0" layoutY="112.0" mnemonicParsing="false" onAction="#Chooselogin" text="Back to Login" />
-                        <Label prefHeight="17.0" prefWidth="181.0" text="Daftar sebagai : " textFill="WHITE" />
+                        <Button layoutX="82.0" layoutY="35.0" mnemonicParsing="false" onAction="#ChoosesignupBuyer" prefHeight="49.0" prefWidth="183.0" styleClass="buttonchosesignas" stylesheets="@CssLogin.css" text="Lembaga Swadaya" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font></Button>
+                        <Button layoutX="82.0" layoutY="103.0" mnemonicParsing="false" onAction="#ChoosesignupSeller" prefHeight="49.0" prefWidth="183.0" styleClass="buttonchosesignas" stylesheets="@CssLogin.css" text="Perusahaan" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font></Button>
+                        <Button layoutX="90.0" layoutY="205.0" mnemonicParsing="false" onAction="#Chooselogin" text="Back to Login" />
+                        <FontAwesomeIcon glyphName="BUILDING" layoutX="32.0" layoutY="145.0" size="40" text="" />
+                        <FontAwesomeIcon glyphName="HOME" layoutX="28.0" layoutY="75.0" size="40" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="signupseller" layoutX="14.0" layoutY="100.0" prefHeight="326.0" prefWidth="264.0" visible="false">
@@ -73,7 +80,7 @@
                   </AnchorPane>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="showinputlogin" layoutY="-2.0" prefHeight="438.0" prefWidth="357.0" style="-fx-background-color: F9FFFF; -fx-background-radius: 20;">
+            <AnchorPane fx:id="showinputlogin" prefHeight="438.0" prefWidth="313.0" style="-fx-background-color: F9FFFF; -fx-background-radius: 20;">
                <children>
                   <TextField id="textfield2" fx:id="loginemail" layoutX="86.0" layoutY="148.0" prefHeight="25.0" prefWidth="181.0" promptText="Email" stylesheets="@CssLogin.css" />
                   <PasswordField id="textfield2" fx:id="loginpass" layoutX="86.0" layoutY="217.0" prefHeight="25.0" prefWidth="187.0" promptText="password" />
@@ -83,9 +90,9 @@
                      </font>
                   </Label>
                   <Button layoutX="84.0" layoutY="261.0" mnemonicParsing="false" onAction="#Tohomepage" prefHeight="40.0" prefWidth="179.0" styleClass="buttonmasuk" stylesheets="@CssLogin.css" text="Sign in" />
-                  <Button fx:id="butsignup" layoutX="109.0" layoutY="322.0" mnemonicParsing="false" onAction="#Choosesignup" prefHeight="31.0" prefWidth="135.0" styleClass="buttonsignup" stylesheets="@CssLogin.css" text="Create Account?">
+                  <Button fx:id="butsignup" layoutX="105.0" layoutY="322.0" mnemonicParsing="false" onAction="#Choosesignup" prefHeight="31.0" prefWidth="135.0" styleClass="buttonmasuk" stylesheets="@CssLogin.css" text="Create Account?">
                      <font>
-                        <Font size="1.0" />
+                        <Font name="System Bold" size="10.0" />
                      </font>
                   </Button>
                   <Label fx:id="warnloginemail" layoutX="95.0" layoutY="177.0" prefHeight="13.0" prefWidth="165.0" textFill="#190505">
@@ -107,11 +114,11 @@
                   <FontAwesomeIcon glyphName="LOCK" layoutX="56.0" layoutY="240.0" size="25" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="justimage" layoutX="358.0" layoutY="2.0" prefHeight="426.0" prefWidth="294.0" styleClass="backde" stylesheets="@CssLogin.css">
+            <AnchorPane fx:id="justimage" layoutX="285.0" prefHeight="431.0" prefWidth="363.0" styleClass="backde" stylesheets="@CssLogin.css">
                <children>
-                  <ImageView blendMode="MULTIPLY" fitHeight="456.0" fitWidth="444.0" layoutX="-4.0" layoutY="-22.0" pickOnBounds="true">
+                  <ImageView blendMode="MULTIPLY" fitHeight="438.0" fitWidth="452.0" pickOnBounds="true">
                      <image>
-                        <Image url="@Foto/GET%20RE-FOOD%201.png" />
+                        <Image url="@Foto/GET%20RE-FOOD.png" />
                      </image>
                   </ImageView>
                </children>
