--- a/src/Login/Scene1.fxml
+++ b/src/Login/Scene1.fxml
@@ -22,28 +22,28 @@
          <children>
             <AnchorPane fx:id="showinputregister" prefHeight="438.0" prefWidth="313.0" style="-fx-background-color: F9FFFF; -fx-background-radius: 20;" stylesheets="@CssLogin.css" visible="false">
                <children>
-                  <Label layoutX="85.0" layoutY="-17.0" prefHeight="89.0" prefWidth="225.0" text="Sign Up ">
+                  <Label layoutX="119.0" layoutY="-8.0" prefHeight="89.0" prefWidth="151.0" text="Sign Up ">
                      <font>
-                        <Font name="System Bold" size="51.0" />
+                        <Font name="System Bold" size="37.0" />
                      </font></Label>
-                  <Label layoutX="164.0" layoutY="66.0" text="With Us">
+                  <Label layoutX="155.0" layoutY="67.0" text="With Us">
                      <font>
-                        <Font name="System Bold" size="28.0" />
+                        <Font name="System Bold" size="25.0" />
                      </font>
                   </Label>
                   <AnchorPane fx:id="signupas" layoutX="16.0" layoutY="120.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="311.0" prefWidth="266.0">
                      <children>
                         <Button layoutX="82.0" layoutY="35.0" mnemonicParsing="false" onAction="#ChoosesignupBuyer" prefHeight="49.0" prefWidth="183.0" styleClass="buttonchosesignas" stylesheets="@CssLogin.css" text="Lembaga Swadaya" textFill="WHITE">
                            <font>
-                              <Font name="System Bold" size="17.0" />
+                              <Font name="System Bold" size="15.0" />
                            </font></Button>
-                        <Button layoutX="82.0" layoutY="103.0" mnemonicParsing="false" onAction="#ChoosesignupSeller" prefHeight="49.0" prefWidth="183.0" styleClass="buttonchosesignas" stylesheets="@CssLogin.css" text="Perusahaan" textFill="WHITE">
+                        <Button layoutX="82.0" layoutY="124.0" mnemonicParsing="false" onAction="#ChoosesignupSeller" prefHeight="49.0" prefWidth="183.0" styleClass="buttonchosesignas" stylesheets="@CssLogin.css" text="Perusahaan" textFill="WHITE">
                            <font>
-                              <Font name="System Bold" size="17.0" />
+                              <Font name="System Bold" size="15.0" />
                            </font></Button>
-                        <Button layoutX="90.0" layoutY="205.0" mnemonicParsing="false" onAction="#Chooselogin" text="Back to Login" />
-                        <FontAwesomeIcon glyphName="BUILDING" layoutX="32.0" layoutY="145.0" size="40" text="" />
-                        <FontAwesomeIcon glyphName="HOME" layoutX="28.0" layoutY="75.0" size="40" />
+                        <Button layoutX="90.0" layoutY="210.0" mnemonicParsing="false" onAction="#Chooselogin" styleClass="buttonmasuk" stylesheets="@CssLogin.css" text="Back to Login" />
+                        <FontAwesomeIcon glyphName="BUILDING" layoutX="33.0" layoutY="156.0" size="40" text="" />
+                        <FontAwesomeIcon glyphName="HOME" layoutX="29.0" layoutY="73.0" size="40" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="signupseller" layoutX="33.0" layoutY="107.0" prefHeight="326.0" prefWidth="264.0" visible="false">
