--- a/src/ListDistribusiPage/listdistribusi.fxml
+++ b/src/ListDistribusiPage/listdistribusi.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1111.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ListDistribusiPage.listdistribusicontroller">
    <children>
       <Label layoutX="487.0" layoutY="26.0" prefHeight="51.0" prefWidth="167.0" text="List Distribusi">
@@ -20,7 +19,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="877.0" prefWidth="1079.0">
                <children>
-                  <GridPane fx:id="listdistribusi" hgap="20.0" layoutX="13.0" layoutY="6.0" prefHeight="870.0" prefWidth="1067.0" vgap="20.0">
+                  <GridPane fx:id="listdistribusi" hgap="20.0" layoutX="13.0" layoutY="6.0" onMouseClicked="#handleGridClick" prefHeight="870.0" prefWidth="1067.0" vgap="20.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
