--- a/src/ListDistribusiPage/Listshow/listshow.fxml
+++ b/src/ListDistribusiPage/Listshow/listshow.fxml
@@ -6,21 +6,24 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.SVGPath?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="137.0" prefWidth="512.0" style="-fx-background-color: d9d9d9d9;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ListDistribusiPage.Listshow.listshowcontroller">
    <children>
-      <Button layoutX="430.0" layoutY="104.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="62.0" />
+      <Button fx:id="rejectbut" layoutX="351.0" layoutY="102.0" maxHeight="28.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="29.0" styleClass="icon-button-delete" stylesheets="@listshow.css" />
       <DatePicker fx:id="distribusidate" layoutX="330.0" layoutY="18.0" />
-      <SVGPath content="M11.46.146A.5.5 0 0 0 11.107 0H4.893a.5.5 0 0 0-.353.146L.146 4.54A.5.5 0 0 0 0 4.893v6.214a.5.5 0 0 0 .146.353l4.394 4.394a.5.5 0 0 0 .353.146h6.214a.5.5 0 0 0 .353-.146l4.394-4.394a.5.5 0 0 0 .146-.353V4.893a.5.5 0 0 0-.146-.353L11.46.146zm-6.106 4.5L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708z" layoutX="452.0" layoutY="109.0" />
-      <SVGPath content="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" layoutX="374.0" layoutY="108.0" />
       <Label fx:id="namapembeli" layoutX="161.0" layoutY="10.0" prefHeight="25.0" prefWidth="91.0" text="Nama Pembeli" />
       <Label fx:id="alamatpembeli" layoutX="162.0" layoutY="31.0" prefHeight="45.0" prefWidth="165.0" text="Alamat Pembeli" />
       <Label fx:id="stockyangdipesan" layoutX="162.0" layoutY="103.0" prefHeight="25.0" prefWidth="135.0" text="Stock yang dipesan" />
-      <Button fx:id="confirmbut" layoutX="351.0" layoutY="102.0" mnemonicParsing="false" onAction="#test" prefHeight="10.0" prefWidth="62.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 1;">
+      <Button fx:id="confirmbut" layoutX="458.0" layoutY="102.0" maxHeight="28.0" mnemonicParsing="false" onAction="#test" prefHeight="28.0" prefWidth="29.0" style="-fx-border-color: black; -fx-border-width: 1;" styleClass="icon-button-prove" stylesheets="@listshow.css">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
       <ImageView fx:id="imageprod" blendMode="DARKEN" fitHeight="131.0" fitWidth="153.0" layoutX="4.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="approvetext" alignment="CENTER" layoutX="353.0" layoutY="101.0" prefHeight="30.0" prefWidth="135.0" text="APPROVED !" textFill="WHITE" visible="false">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
