--- a/src/HomePage/Homepage.fxml
+++ b/src/HomePage/Homepage.fxml
@@ -16,7 +16,7 @@
    <children>
       <AnchorPane fx:id="mainshow" layoutX="170.0" layoutY="-1.0" prefHeight="692.0" prefWidth="1111.0" stylesheets="@Homepage.css">
          <children>
-            <TextField fx:id="searchinput" layoutX="423.0" layoutY="14.0" prefHeight="34.0" prefWidth="244.0" promptText="Get ur food here....." />
+            <TextField fx:id="searchinput" focusTraversable="false" layoutX="423.0" layoutY="14.0" prefHeight="34.0" prefWidth="244.0" promptText="Get ur food here....." />
             <Button layoutX="667.0" layoutY="14.0" mnemonicParsing="false" onAction="#ToSearch" prefHeight="33.0" prefWidth="63.0" style="-fx-cursor: hand;" text="Search" textFill="#1b0505" />
             <AnchorPane fx:id="mainshowbot" layoutY="65.0" prefHeight="636.0" prefWidth="1109.0">
                <children>
