--- a/src/PageSeeProduct/seepro.fxml
+++ b/src/PageSeeProduct/seepro.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -13,6 +14,44 @@
 
 <AnchorPane blendMode="DARKEN" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1109.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PageSeeProduct.seeproductController">
    <children>
+      <ImageView fitHeight="746.0" fitWidth="1112.0" layoutX="-3.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Login/Foto/Backgroundfill.jpg" />
+         </image>
+      </ImageView>
+      <ScrollPane fx:id="pagedetailsproduct" layoutX="-2.0" layoutY="-1.0" prefHeight="633.0" prefWidth="1111.0">
+         <content>
+          <AnchorPane fx:id="siproductif" minHeight="0.0" minWidth="0.0" prefHeight="628.0" prefWidth="1093.0">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff" height="84.0" layoutX="-2.0" layoutY="551.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: D9D9D9;" width="1151.0" />
+                  <ImageView fx:id="seeprodimage" blendMode="DARKEN" fitHeight="264.0" fitWidth="338.0" layoutX="70.0" layoutY="99.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="seeprodname" layoutX="442.0" layoutY="47.0" prefHeight="74.0" prefWidth="653.0" text="Nama Barang">
+                     <font>
+                        <Font name="Gill Sans MT Condensed" size="35.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="445.0" layoutY="275.0" prefHeight="39.0" prefWidth="890.0" text="DESCRIPTION">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="seepodpemilik" layoutX="445.0" layoutY="114.0" prefHeight="47.0" prefWidth="647.0" text="Pemilik">
+                     <font>
+                        <Font name="Franklin Gothic Medium" size="17.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="seeprodalamat" layoutX="446.0" layoutY="175.0" prefHeight="45.0" prefWidth="662.0" text="Alamat :" />
+                  <TextArea fx:id="seeproddes" disable="true" layoutX="442.0" layoutY="310.0" prefHeight="176.0" prefWidth="525.0" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></TextArea>
+                  <Button fx:id="buybutton" layoutX="900.0" layoutY="557.0" mnemonicParsing="false" onAction="#topagepesan" prefHeight="61.0" prefWidth="184.0" text="BUY" />
+                  <Label fx:id="seeproddate" layoutX="446.0" layoutY="233.0" prefHeight="52.0" prefWidth="662.0" text="Expire Date :" />
+                  <Label fx:id="seeprodstock" layoutX="446.0" layoutY="205.0" prefHeight="45.0" prefWidth="662.0" text="Stock :" />
+               </children>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
       <AnchorPane fx:id="pagepesan" layoutX="314.0" prefHeight="635.0" prefWidth="482.0" style="-fx-background-color: D9D9D9;" visible="false">
          <children>
             <Label layoutX="41.0" layoutY="83.0" prefHeight="25.0" prefWidth="83.0" text="Nama Pembeli" />
@@ -25,7 +64,7 @@
                   <Font size="19.0" />
                </font>
             </Label>
-            <Button layoutX="7.0" layoutY="27.0" mnemonicParsing="false" onAction="#cancelpagepesan" text="Cancel" />
+            <Button fx:id="cancelbutform" layoutX="7.0" layoutY="27.0" mnemonicParsing="false" onAction="#cancelpagepesan" text="Cancel" />
             <TextField fx:id="jumlahpesanan" alignment="CENTER_RIGHT" layoutX="238.0" layoutY="225.0" />
             <Label fx:id="maxstock" layoutX="388.0" layoutY="220.0" prefHeight="34.0" prefWidth="93.0" text="max stock">
                <font>
@@ -53,38 +92,5 @@
             </Label>
          </children>
       </AnchorPane>
-      <ScrollPane fx:id="pagedetailsproduct" layoutX="-2.0" layoutY="-1.0" prefHeight="633.0" prefWidth="1111.0">
-         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="753.0" prefWidth="1093.0">
-               <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff" height="819.0" layoutX="-18.0" layoutY="392.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: D9D9D9;" width="1112.0" />
-                  <ImageView fx:id="seeprodimage" blendMode="DARKEN" fitHeight="230.0" fitWidth="338.0" layoutX="402.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label fx:id="seeprodname" layoutX="33.0" layoutY="269.0" prefHeight="74.0" prefWidth="1055.0" text="Nama Barang">
-                     <font>
-                        <Font name="Gill Sans MT Condensed" size="35.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="35.0" layoutY="495.0" prefHeight="39.0" prefWidth="890.0" text="DESCRIPTION">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="seepodpemilik" layoutX="36.0" layoutY="336.0" prefHeight="47.0" prefWidth="1055.0" text="Pemilik">
-                     <font>
-                        <Font name="Franklin Gothic Medium" size="17.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="seeprodalamat" layoutX="36.0" layoutY="395.0" prefHeight="45.0" prefWidth="662.0" text="Alamat :" />
-                  <TextArea fx:id="seeproddes" disable="true" layoutX="33.0" layoutY="531.0" prefHeight="154.0" prefWidth="1055.0" wrapText="true">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></TextArea>
-                  <Button layoutX="945.0" layoutY="701.0" mnemonicParsing="false" onAction="#topagepesan" prefHeight="50.0" prefWidth="140.0" text="BUY" />
-                  <Label fx:id="seeproddate" layoutX="36.0" layoutY="453.0" prefHeight="52.0" prefWidth="662.0" text="Expire Date :" />
-                  <Label fx:id="seeprodstock" layoutX="36.0" layoutY="425.0" prefHeight="45.0" prefWidth="662.0" text="Stock :" />
-               </children>
-            </AnchorPane>
-         </content>
-      </ScrollPane>
    </children>
 </AnchorPane>
