--- a/src/HomePage/Homepage.fxml
+++ b/src/HomePage/Homepage.fxml
@@ -47,7 +47,7 @@
                                     <Font name="System Bold" size="28.0" />
                                  </font>
                               </Label>
-                              <Label layoutX="11.0" layoutY="319.0" prefHeight="40.0" prefWidth="273.0" text="The Most Popular">
+                              <Label layoutX="11.0" layoutY="319.0" prefHeight="40.0" prefWidth="347.0" text="The Most Stock Available">
                                  <font>
                                     <Font name="System Bold" size="28.0" />
                                  </font>
