--- a/src/HomePage/DisplayShow/DisplayBarang.fxml
+++ b/src/HomePage/DisplayShow/DisplayBarang.fxml
@@ -11,8 +11,8 @@
          <font>
             <Font name="Yu Gothic Medium" size="20.0" />
          </font></Label>
-      <Label fx:id="banyakPenjualanLabel" layoutX="15.0" layoutY="151.0" text="Stock : " />
+      <Label fx:id="banyakPenjualanLabel" layoutX="15.0" layoutY="156.0" text="Stock : " />
       <ImageView fx:id="imageproduct" blendMode="DARKEN" fitHeight="119.0" fitWidth="167.0" layoutX="13.0" layoutY="5.0" pickOnBounds="true" />
-      <Label fx:id="Penjual" layoutX="15.0" layoutY="191.0" text="by " />
+      <Label fx:id="expiredatebarang" layoutX="13.0" layoutY="191.0" prefHeight="17.0" prefWidth="178.0" text="Expired Date : " />
    </children>
 </AnchorPane>
