--- a/src/Admin/HomeAdmin.fxml
+++ b/src/Admin/HomeAdmin.fxml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1111.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView layoutX="62.0" layoutY="62.0" prefHeight="200.0" prefWidth="397.0">
+      <TableView layoutX="15.0" layoutY="91.0" prefHeight="454.0" prefWidth="586.0">
         <columns>
-          <TableColumn prefWidth="129.33328247070312" text="Nama Perusahaan" />
-          <TableColumn prefWidth="124.6666259765625" text="Alamat Perusahaan" />
-            <TableColumn prefWidth="24.0" text="Column X" />
-            <TableColumn prefWidth="56.6666259765625" text="Column X" />
+          <TableColumn prefWidth="129.33328247070312" text="Nama Pengguna" />
+          <TableColumn prefWidth="124.6666259765625" text="Alamat Pengguna" />
+            <TableColumn prefWidth="24.0" text="Nomor Pengguna" />
+            <TableColumn prefWidth="56.6666259765625" text="Email Pengguna" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <VBox layoutX="459.0" layoutY="62.0" prefHeight="200.0" prefWidth="100.0" />
+      <Label layoutX="669.0" layoutY="93.0" prefHeight="32.0" prefWidth="149.0" text="Nama Pengguna preview" />
+      <Label layoutX="669.0" layoutY="133.0" prefHeight="32.0" prefWidth="149.0" text="Alamat Pengguna preview" />
+      <Label layoutX="669.0" layoutY="184.0" prefHeight="32.0" prefWidth="149.0" text="Nomor Pengguna Preview" />
+      <Label layoutX="669.0" layoutY="241.0" prefHeight="32.0" prefWidth="149.0" text="Email Pengguna Preview" />
+      <Label layoutX="669.0" layoutY="298.0" prefHeight="32.0" prefWidth="149.0" text="Aktifitas Pengguna preview" />
+      <Button layoutX="767.0" layoutY="481.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="157.0" text="Delete Button" />
    </children>
 </AnchorPane>
